--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ rvm:
   - 2.2.1
   - ruby-head
 
-bundler_args: --jobs=3 --retry=3
 cache: bundler
+bundler_args: --jobs=4 --retry=3 --deployment
 
 
 before_script:
