--- a/config/database_default.yml
+++ b/config/database_default.yml
@@ -15,7 +15,7 @@ default: &default
   pool: 5
   username: root
   password:
-  socket: /var/run/mysqld/mysqld.sock
+  socket: /var/lib/mysql/mysql.sock
 
 default_sqlite3: &default_sqlite3
   adapter: sqlite3
