--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "jquery": "~2.1.4",
     "jquery-ujs": "~1.0.3",
     "vue": "~0.11.10",
-    "lodash": "~3.9.3"
+    "lodash": "~3.9.3",
+    "zeroclipboard": "~2.2.0"
   }
 }
