--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -4,9 +4,19 @@
     "declaration": false,
     "noImplicitAny": true,
     "removeComments": true,
-    "noLib": false
+    "noLib": false,
+    "rootDir": "src/",
+    "outDir": "dest/"
   },
-  "filesGlob": [
-    "./src/**/*.ts"
+  "files": [
+    "src/models/base.ts",
+    "src/models/cf_template.ts",
+    "src/models/dish.ts",
+    "src/models/ec2_instance.ts",
+    "src/models/infrastructure.ts",
+    "src/models/monitoring.ts",
+    "src/models/rds_instance.ts",
+    "src/models/resource.ts",
+    "src/models/s3_bucket.ts"
   ]
 }
