--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -10,6 +10,7 @@
   },
   "files": [
     "src/server_status.ts",
+    "src/users_admin.ts",
     "src/helper.ts",
     "src/models/base.ts",
     "src/models/cf_template.ts",
