--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "devDependencies": {
     "gulp": "^3.9.0",
-    "gulp-tsconfig-files": "git@github.com:icholy/gulp-tsconfig-files.git",
+    "gulp-tsconfig-files": "icholy/gulp-tsconfig-files",
     "gulp-tsd": "0.0.4",
     "gulp-typescript": "^2.7.8",
     "tsd": "^0.6.3",
