--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,17 @@ vendor/bower_components
 /frontend/dest/
 /frontend/node_modules/
 /frontend/typings/
+
+
+
+#emacs backup exclude during commit (clean files)
+*.rb~
+*.rb#
+*.html.erb#
+*.html.erb~
+*.js~
+*.js#
+*.ts~
+*.ts#
+*.css~
+*.css#
