--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,10 @@
     "gulp": "^3.9.0",
     "gulp-tsconfig-files": "icholy/gulp-tsconfig-files",
     "gulp-tsd": "0.0.4",
+    "gulp-tslint": "^3.2.0",
     "gulp-typescript": "^2.7.8",
     "tsd": "^0.6.3",
+    "tslint": "^2.4.2",
     "typescript": "^1.5.3"
   }
 }
