--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,9 @@
   "keywords": [],
   "author": "",
   "license": "MIT",
+  "engines": {
+    "node": ">= 0.10"
+  },
   "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-tsconfig-files": "icholy/gulp-tsconfig-files",
@@ -12,6 +15,8 @@
     "gulp-typescript": "^2.7.8",
     "tsd": "^0.6.3",
     "tslint": "^2.4.2",
-    "typescript": "^1.5.3"
+    "typescript": "^1.5.3",
+    "browserify": "~> 10.2.4",
+    "browserify-incremental": "^3.0.1"
   }
 }
