--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -20,8 +20,6 @@
     "src/models/monitoring.ts",
     "src/models/rds_instance.ts",
     "src/models/resource.ts",
-    "src/models/s3_bucket.ts",
-    "src/serverspec-gen/ast.ts",
-    "src/serverspec-gen/ui.ts"
+    "src/models/s3_bucket.ts"
   ]
 }
