--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -27,6 +27,7 @@
     "src/models/rds_instance.ts",
     "src/models/resource.ts",
     "src/models/s3_bucket.ts",
+    "src/models/serverspec.ts",
     "src/models/snapshot.ts"
   ]
 }
