--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -193,7 +193,8 @@ Style/IndentationConsistency:
   Enabled: false
 
 Style/IndentationWidth:
-  Enabled: false
+  Enabled: true
+  Width: 2
 
 Style/IndentArray:
   Enabled: false
