--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "jquery-ui": "~1.11.4",
     "vue": "~0.12.9",
     "lodash": "~3.9.3",
-    "zeroclipboard": "~2.2.0"
+    "zeroclipboard": "~2.2.0",
+    "eonasdan-bootstrap-datetimepicker": "~4.17.37"
   }
 }
