--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,7 @@
     "gulp-typescript": "^2.7.8",
     "tsd": "^0.6.3",
     "tslint": "^2.4.2",
-    "typescript": "^1.5.3",
+    "typescript": "~1.6.2",
     "md5": "",
     "browserify": "~> 10.2.4",
     "browserify-incremental": "^3.0.1"
