--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "es5",
     "declaration": false,
     "noImplicitAny": true,
+    "noEmitOnError": true,
     "removeComments": true,
     "noLib": false,
     "rootDir": "src/",
