--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,16 +8,23 @@
     "node": ">= 0.10"
   },
   "devDependencies": {
+    "browserify": "~> 10.2.4",
+    "browserify-incremental": "^3.0.1",
     "gulp": "^3.9.0",
     "gulp-tsconfig-files": "icholy/gulp-tsconfig-files",
     "gulp-tsd": "0.0.4",
     "gulp-tslint": "^3.2.0",
     "gulp-typescript": "^2.7.8",
+    "karma": "^0.13.10",
+    "karma-browserify": "^4.3.0",
+    "karma-espower-preprocessor": "0.0.4",
+    "karma-mocha": "^0.2.0",
+    "karma-phantomjs-launcher": "^0.2.1",
+    "md5": "",
+    "phantomjs": "^1.9.18",
+    "power-assert": "^1.0.1",
     "tsd": "^0.6.3",
     "tslint": "^2.4.2",
-    "typescript": "~1.6.2",
-    "md5": "",
-    "browserify": "~> 10.2.4",
-    "browserify-incremental": "^3.0.1"
+    "typescript": "~1.6.2"
   }
 }
