--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "karma-mocha": "^0.2.0",
     "karma-phantomjs-launcher": "^0.2.1",
     "md5": "",
+    "mocha": "^2.3.3",
     "phantomjs": "^1.9.18",
     "power-assert": "^1.0.1",
     "tsd": "^0.6.3",
