--- a/circleci.yml
+++ b/circleci.yml
@@ -1,3 +1,12 @@
 machine:
   node:
     version: 4.1.0
+    ruby:
+      2.2.3
+
+dependencies:
+  cache_directories:
+    - frontend/node_modules/
+    - frontend/typings/
+    - vendor/bower_components/
+    - vendor/bundle/
