--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,9 @@
   "engines": {
     "node": ">= 0.10"
   },
+  "scripts": {
+    "test": "karma start --single-run"
+  },
   "devDependencies": {
     "bower": "^1.5.3",
     "browserify": "~> 10.2.4",
