Fix broken JSON

--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,7 @@
     "vue": "~0.12.9",
     "lodash": "~3.9.3",
     "zeroclipboard": "~2.2.0",
-    "eonasdan-bootstrap-datetimepicker": "~4.17.37"
+    "eonasdan-bootstrap-datetimepicker": "~4.17.37",
     "selectize": "~0.12.1",
     "microplugin": "~0.0.3",
     "sifter": "~0.4.3",
