implementation of above comments. except for date orderig of google chart

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,8 @@
     "karma-espower-preprocessor": "0.0.4",
     "karma-mocha": "^0.2.0",
     "karma-phantomjs-launcher": "^0.2.1",
-    "md5": "",
+    "md5": "^2.0.0",
+    "query-string": "^2.4.1",
     "mocha": "^2.3.3",
     "phantomjs": "^1.9.18",
     "power-assert": "^1.0.1",
