--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -7,7 +7,8 @@
     "removeComments": true,
     "noLib": false,
     "outDir": "dest/",
-    "module": "commonjs"
+    "module": "commonjs",
+    "moduleResolution": "classic"
   },
   "files": [
     "src/helper.ts",
