--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,14 @@
   "scripts": {
     "test": "karma start --single-run"
   },
-  "devDependencies": {
+  "dependencies": {
     "bower": "^1.5.3",
     "browserify": "~> 10.2.4",
     "browserify-incremental": "^3.0.1",
+    "md5": "^2.0.0",
+    "query-string": "^2.4.1"
+  },
+  "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-tsconfig-files": "icholy/gulp-tsconfig-files",
     "gulp-tsd": "0.0.4",
@@ -24,8 +28,6 @@
     "karma-espower-preprocessor": "0.0.4",
     "karma-mocha": "^0.2.0",
     "karma-phantomjs-launcher": "^0.2.1",
-    "md5": "^2.0.0",
-    "query-string": "^2.4.1",
     "mocha": "^2.3.3",
     "phantomjs": "^1.9.18",
     "power-assert": "^1.0.1",
