--- a/bower.json
+++ b/bower.json
@@ -28,6 +28,6 @@
     "microplugin": "~0.0.3",
     "sifter": "~0.4.3",
     "fullcalendar": "~2.4.0",
-    "selectize-bootswatch": "5e9042f617",
+    "selectize-bootswatch": "5e9042f617"
   }
 }
