--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: ruby
 
 rvm:
   - 2.2.2
-  - ruby-head
+#  - ruby-head  # because can't build ruby-head
 
 cache: bundler
 bundler_args: --jobs=4 --retry=3 --deployment
