--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "mocha": "^2.3.3",
     "phantomjs": "^1.9.18",
     "power-assert": "^1.0.1",
+    "serverspec-generator": "skyarch-networks/serverspec-generator#npm",
     "tsd": "^0.6.3",
     "tslint": "^2.4.2",
     "typescript": "~1.6.2"
