Fix circle.yml to skip tests

--- a/circle.yml
+++ b/circle.yml
@@ -19,6 +19,6 @@ database:
     - "echo Skip rake db:hogehoge"
 
 
-# test:
-#   override:
-#     - "cd frontend && npm test"
+test:
+  override:
+    - 'echo ''Skip cd frontend && npm test'''
