only factories.rb are excluded in the rubocop.yml file

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,7 +1,7 @@
 AllCops:
   Exclude:
     - 'vendor/**/*'
-    - 'spec/**/*'
+    - 'spec/factories.rb'
   RunRailsCops: true
   DisplayCopNames: true
 
