--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,8 +16,9 @@
     "browserify": "~> 10.2.4",
     "browserify-incremental": "^3.0.1",
     "md5": "^2.0.0",
-    "serverspec-generator": "0.1.0",
     "query-string": "^2.4.1",
+    "serverspec-generator": "0.1.0",
+    "vue": "^1.0.12",
     "vue-ace": "0.0.1"
   },
   "devDependencies": {
