--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "brace": "0.7.0",
     "browserify": "~> 10.2.4",
     "browserify-incremental": "^3.0.1",
+    "lodash": "^3.10.1",
     "md5": "^2.0.0",
     "query-string": "^2.4.1",
     "serverspec-generator": "0.1.0",
