[WIP] ProjectParameter#index (Read only)

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -12,6 +12,7 @@
   "files": [
     "src/helper.ts",
     "src/modal.ts",
+    "src/project_parameters.ts",
     "src/server_status.ts",
     "src/serverspec-gen.ts",
     "src/users_admin.ts",
