--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,7 +2,7 @@ AllCops:
   Exclude:
     - 'vendor/**/*'
     - 'spec/factories.rb'
-  RunRailsCops: true
+  Rails: true
   DisplayCopNames: true
 
 Style/BlockDelimiters:
