--- a/config/database_default.yml
+++ b/config/database_default.yml
@@ -34,13 +34,13 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
-  <<: *default
-  database: SkyHopperTest
-
 # test:
-#   <<: *default_sqlite3
-#   database: db/test.sqlite3
+#   <<: *default
+#   database: SkyHopperTest
+
+test:
+  <<: *default_sqlite3
+  database: db/test.sqlite3
 
 
 # As with config/secrets.yml, you never want to store sensitive information,
