set rubocop target ruby version to 2.2

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,6 +4,7 @@ AllCops:
     - 'spec/factories.rb'
   Rails: true
   DisplayCopNames: true
+  TargetRubyVersion: 2.2
 
 Style/BlockDelimiters:
   Enabled: false
