--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
     "bootstrap": "^3.3.6",
     "bower": "^1.5.3",
     "brace": "0.7.0",
-    "browserify": "~> 10.2.4",
+    "browserify": "^ 13.0.0",
     "browserify-incremental": "^3.0.1",
     "jquery-textcomplete": "^0.8.1",
     "lodash": "^3.10.1",
@@ -22,9 +22,12 @@
     "query-string": "^2.4.1",
     "serverspec-generator": "^1.0.0",
     "vue": "^1.0.15",
-    "vue-ace": "0.0.1"
+    "vue-ace": "0.0.1",
+    "pdfmake-browserified": "0.1.4",
+    "aliasify": "1.9.0"
   },
   "devDependencies": {
+    "grunt-dump-dir": "^0.1.2",
     "gulp": "^3.9.0",
     "gulp-tsconfig-files": "icholy/gulp-tsconfig-files",
     "gulp-tsd": "0.0.4",
