--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,10 +21,12 @@
     "md5": "^2.0.0",
     "query-string": "^2.4.1",
     "serverspec-generator": "^1.0.0",
-    "vue": "^1.0.15",
+    "vue": "^1.0.16",
     "vue-ace": "0.0.1",
-    "pdfmake-browserified": "0.1.4",
-    "aliasify": "1.9.0"
+    "pdfkit": "^0.7.2 ",
+    "brfs" : "^1.4.3",
+    "blob-stream": "^0.1.3",
+    "iframe": "^0.3.1"
   },
   "devDependencies": {
     "grunt-dump-dir": "^0.1.2",
