--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,8 @@
     "serverspec-generator": "^1.0.0",
     "vue": "^1.0.16",
     "vue-ace": "0.0.1",
-    "pdfmake-browserified": "^0.1.4"
+    "pdfmake-browserified": "^0.1.4",
+    "aliasify": "^1.9.0"
   },
   "devDependencies": {
     "gulp": "^3.9.0",
