--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,8 @@
     "vue-ace": "0.0.1",
     "pdfmake-browserified": "^0.1.4",
     "aliasify": "^1.9.0",
-    "clipboard": "^1.5.8"
+    "clipboard": "^1.5.8",
+    "jszip": "^3.0.0"
   },
   "devDependencies": {
     "gulp": "^3.9.0",
