--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: ruby
 
 rvm:
-  - 2.2.4
-#  - ruby-head  # because can't build ruby-head
+  - 2.3.1
+  - ruby-head  # because can't build ruby-head
 
 cache: bundler
 bundler_args: --jobs=4 --retry=3 --deployment
