Added typings file and instal typings diffinition manager. And set reference paths

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -13,10 +13,6 @@
     "src/complete_project_parameter.ts",
     "src/helper.ts",
     "src/modal.ts",
-    "src/project_parameters.ts",
-    "src/server_status.ts",
-    "src/serverspec-gen.ts",
-    "src/users_admin.ts",
     "src/models/base.ts",
     "src/models/cf_template.ts",
     "src/models/dish.ts",
@@ -27,6 +23,10 @@
     "src/models/resource.ts",
     "src/models/s3_bucket.ts",
     "src/models/serverspec.ts",
-    "src/models/snapshot.ts"
+    "src/models/snapshot.ts",
+    "src/project_parameters.ts",
+    "src/server_status.ts",
+    "src/serverspec-gen.ts",
+    "src/users_admin.ts"
   ]
 }
