--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,22 +11,23 @@
     "test": "karma start --single-run"
   },
   "dependencies": {
+    "aliasify": "^1.9.0",
     "bootstrap": "^3.3.6",
     "bower": "^1.5.3",
     "brace": "0.7.0",
     "browserify": "^ 13.0.0",
     "browserify-incremental": "^3.0.1",
+    "clipboard": "^1.5.8",
+    "file-saver": "^1.3.3",
     "jquery-textcomplete": "^0.8.1",
+    "jszip": "^3.0.0",
     "lodash": "^3.10.1",
     "md5": "^2.0.0",
+    "pdfmake-browserified": "^0.1.4",
     "query-string": "^2.4.1",
     "serverspec-generator": "^1.0.0",
     "vue": "^1.0.24",
-    "vue-ace": "0.0.1",
-    "pdfmake-browserified": "^0.1.4",
-    "aliasify": "^1.9.0",
-    "clipboard": "^1.5.8",
-    "jszip": "^3.0.0"
+    "vue-ace": "0.0.1"
   },
   "devDependencies": {
     "gulp": "^3.9.0",
