Added operation_duration controller ajax call scripts, refactored routes.rb for correct routing of operation controller, refactored: operation-tabpane.js, controller, views and manage modal.

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -28,6 +28,7 @@
     "src/models/s3_bucket.ts",
     "src/models/serverspec.ts",
     "src/models/snapshot.ts",
-    "src/models/zabbix_server.ts"
+    "src/models/zabbix_server.ts",
+    "src/models/operation_duration.ts"
   ]
 }
