--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,22 +13,6 @@
     "postinstall": "node -e \"try { require('fs').symlinkSync(require('path').resolve('node_modules/@bower_components'), 'vendor/bower_components', 'junction') } catch (e) { }\""
   },
   "dependencies": {
-    "aliasify": "^1.9.0",
-    "ansi_up": "^1.3.0",
-    "bootstrap": "^3.3.6",
-    "brace": "0.7.0",
-    "browserify": "^ 13.0.0",
-    "browserify-incremental": "^3.0.1",
-    "clipboard": "^1.5.8",
-    "jquery-textcomplete": "^0.8.1",
-    "jszip": "^3.0.0",
-    "lodash": "^3.10.1",
-    "md5": "^2.0.0",
-    "pdfmake-browserified": "^0.1.4",
-    "query-string": "^2.4.1",
-    "serverspec-generator": "^1.0.0",
-    "vue": "~1.0.24",
-    "vue-ace": "0.0.1",
     "@bower_components/ajax_set.js": "pocke/ajax_set.js#106d927aba64fa99220a1199973d41f2a448bd2c",
     "@bower_components/animate.css": "daneden/animate.css#~3.3.0",
     "@bower_components/bootswatch-dist": "dbtek/bootswatch-dist#paper",
@@ -36,15 +20,31 @@
     "@bower_components/favico.js": "ejci/favico.js#~0.3.7",
     "@bower_components/fullcalendar": "fullcalendar/fullcalendar#~2.4.0",
     "@bower_components/ipam00303": "Joeper214/ipam00303#*",
-    "@bower_components/jquery": "jquery/jquery-dist#~2.1.4",
-    "@bower_components/jquery-ui": "components/jqueryui#~1.11.4",
-    "@bower_components/jquery-ujs": "rails/jquery-ujs#~1.0.3",
     "@bower_components/microplugin": "brianreavis/microplugin.js#~0.0.3",
-    "@bower_components/moment": "moment/moment#>=2.5.0",
-    "@bower_components/noty": "needim/noty#~2.3.5",
     "@bower_components/offline": "HubSpot/offline#~0.7.14",
     "@bower_components/sifter": "brianreavis/sifter.js#~0.4.3",
-    "@bower_components/ws_proxy": "skyarch-networks/ws_proxy#*"
+    "@bower_components/ws_proxy": "skyarch-networks/ws_proxy#*",
+    "aliasify": "^1.9.0",
+    "ansi_up": "^1.3.0",
+    "bootstrap": "^3.3.6",
+    "brace": "0.7.0",
+    "browserify": "^ 13.0.0",
+    "browserify-incremental": "^3.0.1",
+    "clipboard": "^1.5.8",
+    "jquery": "^2.1.4",
+    "jquery-textcomplete": "^0.8.1",
+    "jquery-ui-dist": "^1.11.4",
+    "jquery-ujs": "^1.2.2",
+    "jszip": "^3.0.0",
+    "lodash": "^3.10.1",
+    "md5": "^2.0.0",
+    "moment": ">=2.5.0",
+    "noty": "^2.3.5",
+    "pdfmake-browserified": "^0.1.4",
+    "query-string": "^2.4.1",
+    "serverspec-generator": "^1.0.0",
+    "vue": "~1.0.24",
+    "vue-ace": "0.0.1"
   },
   "devDependencies": {
     "gulp": "^3.9.0",
