--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "browserify-incremental": "^3.0.1",
     "clipboard": "^1.5.8",
     "jquery-textcomplete": "^0.8.1",
+    "js-yaml": "^3.12.0",
     "jszip": "^3.0.0",
     "lodash": "^3.10.1",
     "md5": "^2.0.0",
