Update: Ruby24で動作するように変更

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -14,11 +14,14 @@ random_key = ->(x) {
 development:
   secret_key_base: <%= random_key.("secret_key_base-dev") %>
   db_crypt_key:    <%= random_key.("db_crypt_key-dev") %>
+  db_crypt_salt:   <%= random_key.("db_crypt_salt-dev") %>
 
 test:
   secret_key_base: <%= random_key.("secret_key_base-test") %>
   db_crypt_key:    <%= random_key.("db_crypt_key-test") %>
+  db_crypt_salt:   <%= random_key.("db_crypt_salt-dev") %>
 
 production:
   secret_key_base: <%= random_key.("secret_key_base-prod") %>
   db_crypt_key:    <%= random_key.("db_crypt_key-prod") %>
+  db_crypt_salt:   <%= random_key.("db_crypt_salt-prod") %>
