Fix: ChromeでセキュリティグループのPrintボタンが動作しなくなっていたのを修正
PDF生成に使用していたライブラリをpdfmake-browserifiedからpdfmakeに変更
pdfmakeで使用できるようにフォントをビルドするスクリプトを追加
PDF出力に使用しているフォントをよくわからないものからKaigen Fontsに変更

--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,7 @@ vendor/bower_components
 /frontend/dest/
 /frontend/node_modules/
 /frontend/typings/
+/frontend/fonts/
 
 # MAC system files
 .DS_Store
