Update: config/secrets.ymlにdb_crypt_secretを追加

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -15,13 +15,16 @@ development:
   secret_key_base: <%= random_key.("secret_key_base-dev") %>
   db_crypt_key:    <%= random_key.("db_crypt_key-dev") %>
   db_crypt_salt:   <%= random_key.("db_crypt_salt-dev") %>
+  db_crypt_secret: null # This value is dynamically generated
 
 test:
   secret_key_base: <%= random_key.("secret_key_base-test") %>
   db_crypt_key:    <%= random_key.("db_crypt_key-test") %>
   db_crypt_salt:   <%= random_key.("db_crypt_salt-dev") %>
+  db_crypt_secret: null # This value is dynamically generated
 
 production:
   secret_key_base: <%= random_key.("secret_key_base-prod") %>
   db_crypt_key:    <%= random_key.("db_crypt_key-prod") %>
   db_crypt_salt:   <%= random_key.("db_crypt_salt-prod") %>
+  db_crypt_secret: null # This value is dynamically generated
