--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,8 @@
     "node": ">= 0.10"
   },
   "scripts": {
-    "test": "karma start --single-run"
+    "test": "karma start --single-run",
+    "build-jquery-ui": "cd node_modules/jquery-ui ; npm i && npx grunt concat ; cd ../.."
   },
   "dependencies": {
     "@bower_components/ajax_set.js": "pocke/ajax_set.js#106d927aba64fa99220a1199973d41f2a448bd2c",
@@ -17,11 +18,11 @@
     "@bower_components/eonasdan-bootstrap-datetimepicker": "Eonasdan/bootstrap-datetimepicker#~4.17.37",
     "@bower_components/favico.js": "ejci/favico.js#~0.3.7",
     "@bower_components/fullcalendar": "fullcalendar/fullcalendar#~2.4.0",
-    "@bower_components/jquery-ui": "components/jqueryui#~1.11.4",
     "@bower_components/microplugin": "brianreavis/microplugin.js#~0.0.3",
     "@bower_components/offline": "HubSpot/offline#~0.7.14",
     "@bower_components/sifter": "brianreavis/sifter.js#~0.4.3",
     "@bower_components/ws_proxy": "skyarch-networks/ws_proxy#*",
+    "jquery-ui": "jquery/jquery-ui#~1.11.4",
     "aliasify": "^1.9.0",
     "ansi_up": "^1.3.0",
     "bootstrap": "^3.3.6",
