--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,7 +42,7 @@
     "serverspec-generator": "^1.0.0",
     "vue": "~1.0.24",
     "vue-ace": "0.0.1",
-    "vue-router": "github:vuejs/vue-router#1.0"
+    "vue-router": "~0.7.13"
   },
   "devDependencies": {
     "gulp": "^3.9.0",
