--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,6 @@
     "@bower_components/fullcalendar": "fullcalendar/fullcalendar#~2.4.0",
     "@bower_components/offline": "HubSpot/offline#~0.7.14",
     "@bower_components/ws_proxy": "skyarch-networks/ws_proxy#*",
-    "jquery-ui": "jquery/jquery-ui#~1.11.4",
     "aliasify": "^1.9.0",
     "ansi_up": "^1.3.0",
     "bootstrap": "^3.3.6",
@@ -31,6 +30,7 @@
     "clipboard": "^1.5.8",
     "jquery": "~2.1.4",
     "jquery-textcomplete": "^0.8.1",
+    "jquery-ui": "jquery/jquery-ui#~1.11.4",
     "jquery-ujs": "~1.0.4",
     "jszip": "^3.0.0",
     "lodash": "^3.10.1",
@@ -45,5 +45,10 @@
     "vue-router": "~0.7.13"
   },
   "devDependencies": {
+    "eslint": "^5.13.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4"
   }
 }
