--- a/.eslintignore
+++ b/.eslintignore
@@ -1,5 +1,5 @@
-*.js
-!/app/assets/javascripts/*.js
-!/app/assets/javascripts/models/*.js
-!/app/assets/javascripts/infrastructures/*.js
-!/app/assets/javascripts/modules/*.js
+/
+!/app/assets/javascripts/**
+/app/assets/javascripts/i18n/
+/app/assets/javascripts/modules/font_map.js
+/app/assets/javascripts/modules/vfs_fonts.js
