Update: rubocopのルールを変更

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -66,6 +66,9 @@ Style/SpecialGlobalVars:
 Style/WhileUntilModifier:
   Enabled: false
 
+Bundler/OrderedGems:
+  Enabled: false
+
 Metrics/AbcSize:
   Enabled: false
 
