--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,7 @@
     "@bower_components/favico.js": "ejci/favico.js#~0.3.7",
     "@bower_components/fullcalendar": "fullcalendar/fullcalendar#~2.4.0",
     "@bower_components/offline": "HubSpot/offline#~0.7.14",
-    "@bower_components/ws_proxy": "skyarch-networks/ws_proxy#*",
+    "@bower_components/ws_proxy": "skyarch-networks/ws_proxy#master",
     "aliasify": "^1.9.0",
     "ansi_up": "^1.3.0",
     "bootstrap": "^3.3.6",
