--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       dockerfile: ./Dockerfile
     volumes:
       - ".:/prj/skyhopper"
+      - "./amazonlinux2/known_hosts:/root/.ssh/known_hosts"
     environment:
       - REDIS_HOST=redis
       - REDIS_URL=redis://redis:6379/1
@@ -29,6 +30,8 @@ services:
     image: redis:4
     ports:
       - 6379:6379
+    volumes:
+      - "./redis/data:/data"
 
   nginx:
     image: nginx:1.15
