Update: [WIP]dockerのmysqlのパスワードの変更手段を用意

--- a/config/database_docker.yml
+++ b/config/database_docker.yml
@@ -27,7 +27,7 @@ development:
   <<: *default
   database: SkyHopperDevelopment
   host: mysql
-  password: password
+  password: please-set-random-password
 
 # development:
 #   <<: *default_sqlite3
