--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,6 +2,9 @@ AllCops:
   Exclude:
     - 'vendor/**/*'
     - 'spec/factories.rb'
+    - 'db/migrate/*.rb'
+    - 'db/schema.rb'
+    - 'bin/*'
   DisplayCopNames: true
   TargetRubyVersion: 2.4
 
@@ -66,6 +69,15 @@ Style/SingleLineBlockParams:
 Style/SpecialGlobalVars:
   Enabled: false
 
+Style/TrailingCommaInArguments:
+  EnforcedStyleForMultiline: consistent_comma
+
+Style/TrailingCommaInHashLiteral:
+  EnforcedStyleForMultiline: consistent_comma
+
+Style/TrailingCommaInArrayLiteral:
+  EnforcedStyleForMultiline: consistent_comma
+
 Style/WhileUntilModifier:
   Enabled: false
 
@@ -73,6 +85,9 @@ Bundler/OrderedGems:
   Enabled: false
 
 Metrics/AbcSize:
+  Enabled: false
+
+Metrics/BlockLength:
   Enabled: false
 
 Metrics/BlockNesting:
