Update: .rubocop.ymlのルールを変更

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -5,6 +5,7 @@ AllCops:
     - 'db/migrate/*.rb'
     - 'db/schema.rb'
     - 'bin/*'
+    - 'node_modules/**/*'
   DisplayCopNames: true
   TargetRubyVersion: 2.4
 
