Update: .rubocop.ymlのルールを変更

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,6 +6,7 @@ AllCops:
     - 'db/schema.rb'
     - 'bin/*'
     - 'node_modules/**/*'
+    - 'frontend/**/*'
   DisplayCopNames: true
   TargetRubyVersion: 2.4
 
