Update: ESLintのルールの更新

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,5 +8,8 @@
     "t": false,
     "ws_connector": false,
     "AjaxSet": false
+  },
+  "rules": {
+    "max-len": ["error", { "code": 160 }]
   }
 }
