--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,7 @@
     "moment": false
   },
   "rules": {
-    "max-len": ["error", { "code": 160 }]
+    "max-len": ["error", { "code": 160 }],
+    "no-new": ["off"]
   }
 }
