--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
   },
   "rules": {
     "max-len": ["error", { "code": 160 }],
-    "no-new": ["off"]
+    "no-new": ["off"],
+    "import/no-extraneous-dependencies": ["off"]
   }
 }
