Update: eslintのルールを変更

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,7 @@
   "rules": {
     "max-len": ["error", { "code": 160 }],
     "no-new": ["off"],
-    "import/no-extraneous-dependencies": ["off"]
+    "import/no-extraneous-dependencies": ["off"],
+    "no-param-reassign": ["error", { "props": false }]
   }
 }
