--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
     "max-len": ["error", { "code": 160 }],
     "no-new": ["off"],
     "import/no-extraneous-dependencies": ["off"],
-    "no-param-reassign": ["error", { "props": false }]
+    "no-param-reassign": ["error", { "props": false }],
+    "no-use-before-define": ["error", { "variables": false }]
   }
 }
