--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
     "no-new": ["off"],
     "import/no-extraneous-dependencies": ["off"],
     "no-param-reassign": ["error", { "props": false }],
-    "no-use-before-define": ["error", { "variables": false }]
+    "no-use-before-define": ["error", { "variables": false }],
+    "no-underscore-dangle": ["error", { "allowAfterThis": true }]
   }
 }
