--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,7 @@
   "rules": {
     "max-len": ["error", { "code": 160 }],
     "no-new": ["off"],
+    "react/no-this-in-sfc": ["off"],
     "import/no-extraneous-dependencies": ["off"],
     "no-param-reassign": ["error", { "props": false }],
     "no-use-before-define": ["error", { "variables": false }],
