--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,8 @@
     "AjaxSet": false,
     "Vue": false,
     "VueRouter": false,
-    "moment": false
+    "moment": false,
+    "jQuery": false
   },
   "rules": {
     "max-len": ["error", { "code": 160 }],
