--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,13 +6,14 @@
   "globals": {
     "session_id": false,
     "$": false,
+    "jQuery": false,
     "t": false,
     "ws_connector": false,
     "AjaxSet": false,
     "Vue": false,
     "VueRouter": false,
     "moment": false,
-    "jQuery": false
+    "google": false
   },
   "rules": {
     "max-len": ["error", { "code": 160 }],
