--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,13 +7,18 @@
     "session_id": false,
     "$": false,
     "jQuery": false,
-    "t": false,
-    "ws_connector": false,
     "AjaxSet": false,
     "Vue": false,
     "VueRouter": false,
     "moment": false,
-    "google": false
+    "google": false,
+    "I18n": false,
+    "Favico": false,
+    "Clipboard": false,
+    "noty": false,
+    "t": false,
+    "ws_connector": false,
+    "show_loading": false
   },
   "rules": {
     "max-len": ["error", { "code": 160 }],
