Update: [WIP] travisの設定の変更

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,11 @@ rvm:
   - 2.4.4
 #  - ruby-head  # because can't build ruby-head
 
-cache: bundler
+cache:
+  bundler: true
+  yarn: true
+  directories:
+    - node_modules
 bundler_args: --jobs=4 --retry=3 --deployment
 sudo: false
 
@@ -15,6 +19,10 @@ branches:
   except: /^no-ci-.*$/
 
 before_script:
+  - nvm install --lts
+  - nvm use --lts
+  - bundle install --path vendor/bundle
+  - cd frontend/ && yarn && cd ..
   - cp .travis/database.yml config/database.yml
   - touch log/test.log
   - bundle exec rails db:migrate:reset
