--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ before_script:
   - nvm install --lts
   - nvm use --lts
   - bundle install --path vendor/bundle
+  - bundle clean
   - cd frontend/ && yarn && cd ..
   - echo 'module.exports = {"dummy":{"normal":"dummy","bold":"dummy","italics":"dummy","bolditalics":"dummy"}};' > frontend/fonts/fonts_map.js
   - cp .travis/database.yml config/database.yml
